[gd_scene load_steps=12 format=2]

[ext_resource path="res://Models/rat.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Textures/fur0_normal.tga" type="Texture" id=2]
[ext_resource path="res://Textures/fur0.tga" type="Texture" id=3]
[ext_resource path="res://Scn/Creatures/Rat_Large.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 2 )
uv1_scale = Vector3( 1, 2, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.05744, 1.31851, 1.25552 )

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, 1.127, 1, 0 ), Transform( 0, -0.7, 0.7, 0, 0.7, 0.7, -1, 0, 0, 1.127, 2, 0 ), Transform( 0, -0.7, 0.7, 0, 0.7, 0.7, -1, 0, 0, 1.127, 5, 0 ), Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, 1.127, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, 1.127, 1, 0 ), Transform( 0, 0, 1, 1, 0, 0, 0, 1, 0, 1.127, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, 1.127, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Transform( 0.088, 0, 0.995, 0, 1, 0, -0.996, 0, 0.1, 1.127, 1, 0 ), Transform( -0.088, 0, 0.996, 0, 1, 0, -0.996, 0, -0.1, 1.127, 1, 0 ), Transform( 0.088, 0, 0.995, 0, 1, 0, -0.996, 0, 0.1, 1.127, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Transform( 0.088, 0, 0.995, 0, 1, 0, -0.996, 0, 0.1, 1.127, 1, 0 ), Transform( -0.088, 0, 0.995, 0, 1, 0, -0.996, 0, -0.1, 1.127, 1, 0 ), Transform( 0.088, 0, 0.995, 0, 1, 0, -0.996, 0, 0.1, 1.127, 1, 0 ) ]
}

[node name="Rat_Large" type="KinematicBody" groups=["Enemies"]]
collision_layer = 4
collision_mask = 30
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.0879999, 0, 0.996132, 0, 1, 0, -0.996, 0, 0.0880116, 1.127, 1, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionRat" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.793649, 1.42472, 0 )
shape = SubResource( 1 )

[node name="Pulse" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Shottimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 5 )
anims/Run = SubResource( 7 )
anims/Walk = SubResource( 6 )

[connection signal="timeout" from="Pulse" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Shottimer" to="." method="_on_Shottimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
